update hotspot and semuru logic, refactor classes
Signed-off-by: Saad Khan <saakhan@ibm.com>