@@ -16,14 +16,20 @@
 
 package com.autotune.analyzer.recommendations.layers;
 
+import com.autotune.analyzer.kruizeLayer.impl.TunableSpec;
 import com.autotune.analyzer.recommendations.LayerRecommendationHandler;
-import com.autotune.analyzer.recommendations.LayerRecommendationInput;
 import com.autotune.analyzer.recommendations.utils.RecommendationUtils;
 import com.autotune.analyzer.utils.AnalyzerConstants;
+import com.autotune.common.data.metrics.MetricMetadataResults;
+import com.autotune.common.data.result.IntervalResults;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.sql.Timestamp;
 import java.util.Map;
+
+import static com.autotune.analyzer.recommendations.utils.RecommendationUtils.getJvmMetricMetadataFromFilteredResults;
+import static com.autotune.analyzer.recommendations.utils.RecommendationUtils.getTunableValue;
 
 /**
  * Recommendation handler for the Hotspot (OpenJDK) JVM layer.
@@ -47,25 +53,26 @@ public class HotspotLayerRecommendationHandler implements LayerRecommendationHan
     }
 
     @Override
-    public Object getRecommendation(String tunableName, LayerRecommendationInput input) {
-        if (!AnalyzerConstants.AutotuneConfigConstants.LAYER_HOTSPOT.equalsIgnoreCase(input.getEffectiveLayer())) {
-            LOGGER.debug("Hotspot handler: effectiveLayer '{}' does not match layerName 'hotspot'", input.getEffectiveLayer());
-            return null;
-        }
+    public Object generateRecommendations(String tunableName, Map<TunableSpec, Object> tunableSpecObjectMap, Map<Timestamp, IntervalResults> filteredResultsMap) {
+
+        Double memLimits = (Double) getTunableValue(tunableSpecObjectMap, AnalyzerConstants.AutotuneConfigConstants.LAYER_CONTAINER, AnalyzerConstants.MetricNameConstants.MEMORY_LIMIT);
+        Double cpuLimits = (Double) getTunableValue(tunableSpecObjectMap, AnalyzerConstants.AutotuneConfigConstants.LAYER_CONTAINER, AnalyzerConstants.MetricNameConstants.CPU_LIMIT);
 
         if (AnalyzerConstants.LayerConstants.TunablesConstants.MAX_RAM_PERC.equals(tunableName)) {
             return AnalyzerConstants.HotspotConstants.MAX_RAM_PERCENTAGE_VALUE;
         }
 
         if (AnalyzerConstants.LayerConstants.TunablesConstants.GC_POLICY.equals(tunableName)) {
-            String jdkVersion = input.getJdkVersion();
+            MetricMetadataResults metricMetadata = getJvmMetricMetadataFromFilteredResults(filteredResultsMap);
+            String jdkVersion = metricMetadata.getVersion();
             if (jdkVersion == null || jdkVersion.isEmpty()) {
                 LOGGER.warn("JVM version is null or empty (layerName=hotspot)");
                 return null;
             }
             Double jvmHeapSizeMB = null;
             double maxRamPercentage = AnalyzerConstants.HotspotConstants.MAX_RAM_PERCENTAGE_VALUE;
-            return decideGCPolicy(jvmHeapSizeMB, maxRamPercentage, input.getMemLimit(), input.getCpuLimit(), jdkVersion);
+            //TODO: update the below call based on the new logic
+            return decideGCPolicy(jvmHeapSizeMB, maxRamPercentage, memLimits, cpuLimits, jdkVersion);
         }
 
         return null;
@@ -85,19 +92,19 @@ public class HotspotLayerRecommendationHandler implements LayerRecommendationHan
         }
 
         if (cpuCores <= 1 && jvmHeapSizeMB < 4096) {
-            return "-XX:+UseSerialGC";
+            return AnalyzerConstants.LayerConstants.GC_SERIAL;
         } else if (cpuCores > 1 && jvmHeapSizeMB < 4096) {
-            return "-XX:+UseParallelGC";
+            return AnalyzerConstants.LayerConstants.GC_PARALLEL;
         } else if (jvmHeapSizeMB >= 4096) {
             if (jdkVersion >= 17) {
-                return "-XX:+UseZGC";
+                return AnalyzerConstants.LayerConstants.GC_ZGC;
             } else if (jdkVersion >= 11) {
-                return "-XX:+UseShenandoahGC";
+                return AnalyzerConstants.LayerConstants.GC_SHENANDOAH;
             } else {
-                return "-XX:+UseG1GC";
+                return AnalyzerConstants.LayerConstants.GC_G1GC;
             }
         } else {
-            return "-XX:+UseG1GC";
+            return AnalyzerConstants.LayerConstants.GC_G1GC;
         }
     }
 }
